# KlandoDash

./: .env.example  .gitignore  .pdm-python  =2.6.0  CACHE_SYSTEM_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Cahier_des_charges.md  DEBUG_STATS_ISSUE.md  DEMANDE_CLIENT.md  GEMINI.md  PLAN_TRANSACTIONS.md  Procfile  README.md  TODO.md  add_passenger_booking.sql  analyze_users_data.py  apply_map_fix.py  cache_formats_documentation.json  cache_performance_results_20250909_142050.json  cache_performance_results_20250914_122704.json  check_data.js  clean_repo.sh  clear_trips_cache.py  dash_simulation_string_id.html  debug_db.py  debug_formatter.py  debug_map_page.py  debug_pagination.py  debug_real_data.py  debug_support_comments.py  debug_trip_passengers.py  debug_user_roles.py  debug_users_trips.py  fallback_map_style.json  info.md  local_cache_performance_results_20250909_142510.json  mail_transfert_domaine.txt  migration_users_data.sql  modified_map_style.json  (+53 more)
assets/: style.css
dash_apps/: README.md  app.py  config.py  db_utils.py  requirements.txt  simple_auth.py  test.wfd  users.db
database/: README.md  package-lock.json  schema.sql  tables.md
docs/: AI_ARCHITECTURE.md  AI_DATA_FRAMEWORK.md  AI_MATCHING_SYSTEM.md  ARCHITECTURE_DIAGRAMS.md  DATA_FLOW_MAPPING.md  DEVELOPMENT_GUIDELINES.md  DOCS_RADAR_DEBUG.md  GPT.md  IA_PAGE_COMMANDS.md  Klando-Gemini.md  MAP_PAGE_SPEC.md  MARKETING_MEMORIES.md  MARKETING_MODULE.md  PILOTAGE_COCKPIT.md  README.md  REST_API.md  TABLE_CONFIG_FORMAT.md  WEBSITE_INTEGRATION.md  WHATSAPP_INTEGRATION.md  bugfix-ticket-status-refresh.md  plan-authentification-google.md  plan-support-technique.md  support-module-architecture.md
frontend/: .env.example  .gitignore  README.md  check_ids.js  diagnostic_ai.js  next.config.mjs  package-lock.json  package.json  rescue.js  tailwind.config.ts  tsconfig.tsbuildinfo
output/: trips_data.csv  (+1 more)
(+953 files in other folders)
