[project]
name = "KlandoDash"
version = "0.1.0"
description = "DashBoard for Klando"
authors = [
    {name = "Achille Tsakas", email = "achille.tsakas@klando-sn.com"},
]
dependencies = [
    "orjson>=3.9.10",
    "geopy>=2.4.1",
    "pandas==1.5.3",
    "streamlit>=1.20.0",
    "streamlit-folium>=0.10.0",
    "streamlit-aggrid>=1.0.0",
    "folium>=0.14.0",
    "numpy==1.24.3",
    "python-dateutil>=2.8.2",
    "firebase-admin>=6.0.0",
    "schedule>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=6.0.0",
    "polyline>=1.4.0",
    "psycopg2-binary>=2.9.6",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "altair==4.2.2",
    "beautifulsoup4==4.13.3",
    "blinker==1.8.2",
    "branca==0.8.1",
    "cachetools==5.5.2",
    "click==8.1.8",
    "cryptography==44.0.2",
    "fpdf==1.7.2",
    "google-api-core==2.24.1",
    "google-api-python-client==2.162.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.2",
    "google-cloud-firestore==2.20.1",
    "google-cloud-storage==3.1.0",
    "greenlet==3.1.1",
    "jinja2==3.1.5",
    "markdown-it-py==3.0.0",
    "pillow==10.4.0",
    "pyarrow==17.0.0",
    "python-decouple==3.8",
    "requests==2.32.3",
    "rich==13.9.4",
    "tenacity==9.0.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "watchdog==4.0.2",
    "xlsxwriter==3.2.3",
    "dash>=3.0.4",
    "dash-bootstrap-components",
    "dash-html-components>=2.0.0",
    "dash-core-components>=2.0.0",
    "dash-table>=5.0.0",
    "flask-session>=0.8.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
